first try to remove extlist